--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
   <main>
 
-    <h1 class="title">El número mágico.</h1>
+    <h1 class="title">El número mágico 🧙🏻‍♀️</h1>
+    
     <p class="big">Tengo un número en la mente, <br> ¿podrás adivinarlo? <br> Inténtalo:</p>
+    <img src="dados.gif" alt="" class="dados">
     <input type="number" id="numero-usuario" min="0" max="100">
     <button id="boton-adivinar">Adivinar</button>
     <p id="mensaje"></p>
