--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <h1 class="title">El número mágico 🧙🏻‍♀️</h1>
     
     <p class="big">Tengo un número en la mente, <br> ¿podrás adivinarlo? <br> Inténtalo:</p>
-    <img src="dados.gif" alt="" class="dados">
+    
     <input type="number" id="numero-usuario" min="0" max="100">
-    <button id="boton-adivinar">Adivinar</button>
+    <button id="boton-adivinar">
+      <img src="dados.gif" alt="" class="dados">
+    </button>
     <p id="mensaje"></p>
   </main>
   <script src="main.js"></script>
